--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -7,6 +7,12 @@ html(lang="en")
         header
             h1 It works!
         main
-            h2  Welcome to Zoom
+            form#nick
+                input(type="text", placeholder="Choose a nickname", required)
+                button Save
+            ul
+            form#message
+                input(type="text", placeholder="write a msg", required)
+                button Send
         script(src="/public/js/app.js")
 
