--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -7,12 +7,6 @@ html(lang="en")
         header
             h1 It works!
         main
-            form#nick
-                input(type="text", placeholder="Choose a nickname", required)
-                button Save
-            ul
-            form#message
-                input(type="text", placeholder="write a msg", required)
-                button Send
+        script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
 
