--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -5,22 +5,8 @@ html(lang="en")
         link(rel="stylesheet" href="https://unpkg.com/mvp.css")
     body
         header
+            h1 Zoom
         main
-            div#welcome
-                form
-                    input(placeholder="room name", required, type="text")
-                    button Enter Room
-                h4 Open Rooms:
-                ul
-            div#room
-                h3
-                ul
-                form#name
-                    input(placeholder="name", required, type="text")
-                    button Save
-                form#msg
-                    input(placeholder="message", required, type="text")
-                    button Send
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
 
